fixed alignment

--- a/recruit-tracker/src/components/HrPortal/HrPortal.css
+++ b/recruit-tracker/src/components/HrPortal/HrPortal.css
@@ -29,7 +29,7 @@
   }
 
   .buttonWrapper {
-    width: 99.8%;
+    width: 100%;
     max-height: 30px;
     display: flex;
     align-items: right;
